--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,18 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - mainclass",
+            "request": "launch",
+            "mainClass": "mainclass"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - MAIN",
+            "request": "launch",
+            "mainClass": "MAIN"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Main",
             "request": "launch",
             "mainClass": "Main"
